--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,13 +81,11 @@ section {
   }
 
 .hero-form {
+    border: 3px solid #024e76;
     color: #024e76;
     padding: 20px;
     width: 500px;
     background-color: #fce138;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #024e76;
     position: absolute;
     bottom: 120px;
     right: 140px;
@@ -119,8 +117,8 @@ section {
   .hero-form button {
     color: #fce138;
     background-color: #024e76;
-    font-size: 16px;
-    padding: 10px 20px;
     border: none;
+    padding: 10px 20px;
+    font-size: 16px;
   }
   /* HERO STYLE END */
