--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,7 @@ section {
       text-align: center;
 }
 
+/* WHAT WE DO STYLES START */
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -135,6 +136,7 @@ section {
     margin: 0 auto;
 }
 
+/* WHAT YOU DO STYLES START */
 .steps {
       text-align: center;
       background: #fce138;
@@ -180,6 +182,7 @@ section {
       font-size: 38px;
 }
 
+/* MEET THE TRAINERS STYLES START */
 .trainers {
       text-align: center;
 }
@@ -226,3 +229,27 @@ section {
     font-size: 17px;
     line-height: 1.3;
 }
+
+/* REACH OUT STYLES START */
+.contact {
+    text-align: center;
+    background-color: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+  }
